fix 修复部分 bug